# oc-ajay

./: README.md  build.sh  generate-yang-py-acl.sh  generate-yang-py-local-route.sh  generate-yang-py.sh  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml
db/: db_manager.py
db/test/: test_db.py
netconf-client/test/: test-client.py  test-edit-config-system.py  test-get-running-config.py  test-get-schema.py
simulator/netconf-server/: command.xml  run.sh
src/: generate-yang-py.sh
src/db/: Readme.md  db_manager.py  db_table_helper.py
src/ui/: a  ui_from_yang_json.py  ui_web_service.py  yang_json_ui.py
test/general/: test_string.py
tmf/tmf639/: Readme.md
tmf/tmf641/: Readme.md
tmf/tmf642/: Readme.md  alarm.py  alarm_comment.py  alarm_perceived_severity.py  alarm_type.py  alarm_web_service.py
tmf/tmf645/: Readme.md
tmf/tmf653/: Readme.md
yang-py/: __init__.py  macsec.py  system.py  test.py  yang.py
yang-py-test/: done  hurre.achievements  test-local_routes.py  to-do
yang-py-test/bgp/: test-bgp.py
yang-py-test/interfaces/: test-interface.py
yang-py-test/local_rounting/: test-local_routes.py
yang-py-test/system/: ntp.json  system.json  test-system-dns.py  test-system-json.py  test-system-ntp-json.py  test-system-ntp.py  test-system.py
yang-py/access_points/: __init__.py
yang-py/acl/: __init__.py
yang-py/aps/: __init__.py
yang-py/bfd/: __init__.py
yang-py/bgp/: __init__.py
yang-py/channel_monitors/: __init__.py
yang-py/components/: __init__.py
yang-py/connections/: __init__.py
yang-py/ha_groups/: __init__.py
(+3583 files in other folders)
