[metadata]
name = oc-nlp-ajay
version = 0.0.6
author = Ajay Nema
author_email = ajay.nema@gmail.com
description = Open Config NLP and TMF Interface
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/ajaynema/oc-nlp-ajay
project_urls =
    Bug Tracker = https://github.com/ajaynema/oc-nlp-ajay/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src